discussion/kv_engine/131353/131353_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Remove MemcachedCommand::hello

The "hello" command was added back in the days during development
of Greenstack where the connection would be in different states.

Now that we only support MCBP the extra "hello" command cause
multiple roundtrips to the server (first sending the hello to
the server with the name, and later we would set the actual
options in the next call to hello)

Change-Id: I7990420f25ea08ca6d49041809b27680e2871ed2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-06-26 05:34:21.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-26 07:08:57.000000000
Message: 
Patch Set 4: Verified+1

Build Successful 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1534/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24853/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28837/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3028/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4455/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4387/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12271/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3494/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4548/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-06-30 10:03:11.000000000
Message: 
Patch Set 4: Code-Review-1

(1 comment)
Line:29, protocol/connection/client_connection.h -> I'd prefer keeping the forward-declare (and de-inlining the two methods you have which manipulate JSON) to keep compile-times down.

----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2020-07-02 05:17:06.000000000
Message: 
Patch Set 4:

(1 comment)
Line:29, protocol/connection/client_connection.h -> Its not the two inlined methods which is the problem, but the member (from building without it: 

    ../kv_engine/protocol/connection/client_connection.h:944:20: error: field ‘agentInfo’ has incomplete type ‘nlohmann::json’ {aka ‘nlohmann::basic_json<>’}
      944 |     nlohmann::json agentInfo;
          |                    ^~~~~~~~~

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-07-02 12:21:46.000000000
MISMATCHED INLINE COMMENT
Line:29, protocol/connection/client_connection.h -> I believe we do use forward declarations of member variable types elsewhere.

client_connection.h is included from a reasonable number of places, so increasing the needed headers isn't ideal, but there is already a large number of headers included here so maybe it doesn't make things significantly worse.

If you want to leave as is that's probably fine.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2020-07-02 12:26:56.000000000
MISMATCHED INLINE COMMENT
Line:29, protocol/connection/client_connection.h -> It is on my list to clean up and split that file eventually and it can probably be done as part of that.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-07-02 08:43:10.000000000
MISMATCHED INLINE COMMENT
Line:29, protocol/connection/client_connection.h -> So the complete type is only needed when that method is called - the header itself doesn't need it. We can forward declare as long as the .cc file which  creates an instance of MemcachedConnection includes nlohmann/json.hpp.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2020-07-02 12:15:33.000000000
MISMATCHED INLINE COMMENT
Line:29, protocol/connection/client_connection.h -> That doesn't seem to be the case:

tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:37:7: note: declaration of ‘using json = class nlohmann::basic_json<>’ {aka ‘class nlohmann::basic_json<>’}
   37 | class basic_json;
      |       ^~~~~~~~~~


client_connection_map.cc includes nlohmann/json.hpp (after client_connection_map.h of course thats the normal ordering). It'll be extremely confusing (and non-intuitive) if I have to deal with the include order explicitly in each "client" of the file.
----------------------------------------------------------------------------------------------------------------------
